# sky-poc

./: .dockerignore  .env.example  Dockerfile.atlas-forge  Dockerfile.celery  Dockerfile.setup-db  README.md  docker-compose.yaml  pyproject.toml  test-result
api/: models.py
api/routes/public/: __init__.py  documents.py
app/: __init__.py  config.py  db.py  models.py
atlas_forge/: __init__.py  config.py  db.py  streamlit_app.py  worker.py
atlas_forge/core/: diff.py  normalize.py
atlas_forge/models/: api_models.py  db_models.py
atlas_forge/routes/public/: __init__.py  documents.py
dockerfiles/celery/: Dockerfile
scripts/: setup_db.py  setup_db.sql
tests/: semi-automatic-test.py
