[project]
name = "atlas-notion-ingestion-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "David Noack",email = "ddnoack@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "notion-client (>=2.4.0,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
httpx = "^0.28.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
